--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
 		"time.h": "c",
 		"so_long_bonus.h": "c",
 		"get_next_line_bonus.h": "c",
-		"unistd.h": "c"
+		"unistd.h": "c",
+		"get_next_line.h": "c"
 	}
 }
